<resources>
    <string name="app_name">Online Cashier</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="todo">todo</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="nama_belakang">Nama Belakang</string>
    <string name="data_barang">Data Barang</string>
    <string name="edit_toko">Edit Toko</string>
    <string name="penjualan">Penjualan</string>
    <string name="pembukuan">Pembukuan</string>
    <string name="penambahan_stok">Penambahan Stok</string>
    <string name="keranjang_pembelian">Keranjang Pembelian</string>
    <string name="nama_toko">Nama Toko</string>
    <string name="nama_pemilik">Nama Pemilik</string>
    <string name="no_handphone">No. Handphone</string>
    <string name="alamat">Alamat</string>
    <string name="nomor_rekening">Nomor Rekening</string>
    <string name="simpan">Simpan</string>
    <string name="tambah_barang_baru">Tambah Barang Baru</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="harga_jual">Harga Jual</string>
    <string name="harga_beli">Harga Beli</string>
    <string name="jumlah">Jumlah</string>
    <string name="input_data">Input Data</string>
    <string name="dot">. . .</string>
    <string name="copyright_2021">Copyright 2021</string>
    <string name="update_data">Update Data</string>
    <string name="edit_barang">Edit Barang</string>
    <string name="barang_kosong">Barang Kosong</string>
    <string name="nomer">Nomer</string>
    <string name="tanggal">Tanggal</string>
    <string name="dot2">:</string>
    <string name="no">No.</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="nilai">Nilai</string>
    <string name="hari_ini">HARI INI</string>
    <string name="pendapatan">PENDAPATAN</string>
    <string name="pengeluaran">PENGELUARAN</string>
    <string name="rp_0">Rp.0</string>
    <string name="belum_ada_riwayat">Belum ada riwayat</string>
    <string name="total_beli">Total Beli</string>
    <string name="batal">Batal</string>
    <string name="bayar">Bayar</string>
    <string name="total_bayar">Total Bayar</string>
    <string name="diskon">Diskon</string>
    <string name="cari_barang">Cari Barang</string>
    <string name="produk">PRODUK</string>
    <string name="tutup">TUTUP</string>
    <string name="simpan_pdf">Simpan PDF</string>
    <string name="nama_bank">Nama Bank</string>
    <string name="keranjang_kosong">Keranjang kosong</string>
</resources>