<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_full_color"
    tools:context=".ui.AddItemActivity">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_round20_white"
        android:contentDescription="@string/todo"
        android:padding="7dp"
        android:src="@drawable/ic_round_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_cart"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_store_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_cart"
        app:layout_constraintVertical_bias="0.0">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_form_add_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="20dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:id="@+id/rl_form_add_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingTop="60dp"
                android:paddingEnd="10dp"
                android:paddingBottom="50dp">

                <EditText
                    android:id="@+id/et_item_name"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/nama_barang"
                    android:inputType="textCapWords"
                    android:selectAllOnFocus="true"
                    android:textAlignment="center"
                    android:textColorHint="@color/primary_light"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_buy_price"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_item_name"
                    android:hint="@string/harga_beli"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:selectAllOnFocus="true"
                    android:textAlignment="center"
                    android:textColorHint="@color/primary_light"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_sell_price"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_buy_price"
                    android:hint="@string/harga_jual"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:selectAllOnFocus="true"
                    android:textAlignment="center"
                    android:textColorHint="@color/primary_light"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_total_items"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_sell_price"
                    android:hint="@string/jumlah"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:selectAllOnFocus="true"
                    android:textAlignment="center"
                    android:textColorHint="@color/primary_light"
                    android:textSize="15sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_input_data"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/cv_form_add_item"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_round20_white"
            android:text="@string/input_data"
            android:textAllCaps="false"
            android:textColor="@color/primary_light"
            app:backgroundTint="@color/white" />
    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_upload_item"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/bg_round50_gradient"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_cart" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/tambah_barang_baru"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/img_cart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>